objects/Budget__c.object
<CustomObject>
    <fields>
        <fullName>Today_Equipment_Opportunity__c</fullName>
        <label>Today&apos;s Equipment Opportunity</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Today_Service_Invoiced__c</fullName>
        <label>Today&apos;s Service Invoiced</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Today_Service_Job_Created__c</fullName>
        <label>Today&apos;s Service Job Created</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Today_Service_Job_Invoiced__c</fullName>
        <label>Today&apos;s Service Job Invoiced</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Today_Service_Job_Scheduled__c</fullName>
        <label>Today&apos;s Service Job Scheduled</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Today_Service_Opportunity__c</fullName>
        <label>Today&apos;s Service Opportunity</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Call_Volume_Target__c</fullName>
        <description>The total call volume target for this budget period.</description>
        <formula>Service_Call_Volume_Target__c +  IF(Equipment_Call_Volume_Target__c = 0, 0, Equipment_Call_Volume_Target__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total call volume target for this budget period.</inlineHelpText>
        <label>Total Job Volume Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Equipment_Gross_Profit_Actual__c</fullName>
        <formula>( Equipment_Gross_Actual__c + Other_Equipment_Gross_Profit_Actual__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the total equipment gross profit for this budget period?</inlineHelpText>
        <label>Total Equipment Gross Profit Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Equipment_Revenue_Actual__c</fullName>
        <formula>( Equipment_Revenue_Actual__c + Other_Equipment_Revenue_Actual__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the total equipment revenue for this budget period?</inlineHelpText>
        <label>Total Equipment Revenue Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Actual__c</fullName>
        <description>The actual total amount of gross dollars for this budget period.</description>
        <formula>Total_Service_Gross_Profit_Actual__c  + Total_Equipment_Gross_Profit_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the total current gross profit?</inlineHelpText>
        <label>Total Gross Profit Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Actual_to_Target__c</fullName>
        <description>The percentage of actual gross dollars to the target for this budget period</description>
        <formula>IF(Total_Gross_Target__c = 0, 0, Total_Gross_Actual__c / Total_Gross_Target__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What percentage of the total gross profit target has been achieved?</inlineHelpText>
        <label>Total Gross Profit Actual to-Target</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Margin_Actual__c</fullName>
        <description>The total percentage (margin) of gross dollars for this budget period.</description>
        <formula>IF(Total_Revenue_Actual__c = 0, 0, Total_Gross_Actual__c / Total_Revenue_Actual__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the current total gross profit margin?</inlineHelpText>
        <label>Total Gross Profit Margin Actual</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Margin_Target__c</fullName>
        <description>The percentage (margin) of the total gross target for this budget period.</description>
        <formula>Total_Gross_Target__c / Total_Revenue_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the total gross profit margin target?</inlineHelpText>
        <label>Total Gross Profit Margin Target</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Profit_Opportunity_Dollars__c</fullName>
        <formula>Equipment_Gross_Profit_Opportunity__c + Service_Gross_Profit_Opportunity_Dollars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the total gross profit dollar amount on scheduled but un-invoiced work orders?</inlineHelpText>
        <label>Total Gross Profit Opportunity Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Target__c</fullName>
        <description>This is the total Gross Dollar target for this budget period</description>
        <formula>Service_Gross_Target__c + Equipment_Gross_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the total (service + equipment) gross profit target?</inlineHelpText>
        <label>Total Gross Profit Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Job_Volume_Actual__c</fullName>
        <formula>Service_Call_Volume_Actual__c + Equipment_Call_Volume_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Job Volume Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Job_Volume_Actual_to_Target__c</fullName>
        <formula>Total_Job_Volume_Actual__c /Total_Call_Volume_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Job Volume Actual to Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Actual__c</fullName>
        <description>The total current revenue</description>
        <formula>Total_Service_Revenue_Actual__c +  Total_Equipment_Revenue_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the total current revenue?</inlineHelpText>
        <label>Total Revenue Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Actual_to_Target__c</fullName>
        <description>The percentage of actual revenue dollars compared to target for this budget period.</description>
        <formula>IF(Total_Revenue_Target__c = 0,0,Total_Revenue_Actual__c / Total_Revenue_Target__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What percentage of the total revenue target has been achieved?</inlineHelpText>
        <label>Total Revenue Actual to-Target</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Opportunity_Dollars__c</fullName>
        <formula>Equipment_Revenue_Opportunity_Dollars__c + Service_Revenue_Opportunity_Dollars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the total dollar amount on scheduled but un-invoiced work orders?</inlineHelpText>
        <label>Total Revenue Opportunity Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Target__c</fullName>
        <formula>Equipment_Revenue_Target__c + Service_Revenue_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the total (service + equipment) revenue target?</inlineHelpText>
        <label>Total Revenue Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Total_Oppty_to_Target__c</fullName>
        <description>Total Revenue Actual + Total Opportunity Dollars / Total Revenue Target</description>
        <formula>IF((Total_Revenue_Actual__c)+(Total_Revenue_Opportunity_Dollars__c) &gt; 0, 
(((Total_Revenue_Actual__c)+(Total_Revenue_Opportunity_Dollars__c))/Total_Revenue_Target__c), 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue + Total Oppty to Target</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Service_Gross_Profit_Actual__c</fullName>
        <description>The total Service GP for this budget period</description>
        <formula>( Service_Gross_Actual__c + Other_Service_Gross_Profit_Actual__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the current service gross profit in total?</inlineHelpText>
        <label>Total Service Gross Profit Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Service_Revenue_Actual__c</fullName>
        <description>The total Service Revenue for this budget period</description>
        <formula>( Service_Revenue_Actual__c + Other_Service_Revenue_Actual__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the total service revenue for this budget period?</inlineHelpText>
        <label>Total Service Revenue Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trending_Equipment_Revenue_Actual__c</fullName>
        <description>Where the current budget&apos;s Equipment Revenue Actual will be, based on the current daily trend and remaining working days.</description>
        <formula>Actual_Equipment_DSA__c * Working_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on current revenue trend and remaining working days, what will our total revenue be at the end of the month.</inlineHelpText>
        <label>Trending Equipment Revenue Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trending_Equipment_Revenue_to_Target__c</fullName>
        <description>Based on our Actual Equipment DSA, what our trending total revenue will be compared to our target.</description>
        <formula>Trending_Equipment_Revenue_Actual__c /  Equipment_Revenue_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on current revenue trend what percentage of revenue target will be achieved?</inlineHelpText>
        <label>Trending Equipment Revenue to Target</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Trending_Revenue_Actual__c</fullName>
        <description>Where the current budget&apos;s Total Revenue Actual will be, based on the current daily trend and remaining working days.</description>
        <formula>Actual_Daily_Sales_Average__c * Working_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on current revenue trend and remaining working days, what will our total revenue be at the end of the month.</inlineHelpText>
        <label>Trending Revenue Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trending_Revenue_Actual_to_Target__c</fullName>
        <description>Based on our Actual DSA, what our trending total revenue will be compared to our target.</description>
        <formula>Trending_Revenue_Actual__c /  Total_Revenue_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on current revenue trend what percentage of revenue target will be achieved?</inlineHelpText>
        <label>Trending Revenue Actual to Target</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Trending_Service_Revenue_Actual__c</fullName>
        <description>Where the current budget&apos;s  Service Revenue Actual will be, based on the current daily trend and remaining working days.</description>
        <formula>Actual_Service_DSA__c * Working_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on current revenue trend and remaining working days, what will our service revenue be at the end of the month.</inlineHelpText>
        <label>Trending Service Revenue Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trending_Service_Revenue_to_Target__c</fullName>
        <description>Based on our Actual Service Revenue DSA, what our trending total revenue will be compared to our target.</description>
        <formula>Trending_Service_Revenue_Actual__c /  Service_Revenue_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on current revenue trend what percentage of revenue target will be achieved?</inlineHelpText>
        <label>Trending Service Revenue to Target</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of budget this applies to</description>
        <inlineHelpText>The type of budget this applies to</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Re-forecast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Working_Days__c</fullName>
        <defaultValue>22</defaultValue>
        <description>The amount of working days during this budget period. Usually does not include weekends.</description>
        <inlineHelpText>How many working days are in this budget period?</inlineHelpText>
        <label>Working Days</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Budget</label>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <recordTypes>
        <fullName>Segment_Budget</fullName>
        <active>true</active>
        <description>Budget record for segments</description>
        <label>Segment Budget</label>
    </recordTypes>
    <recordTypes>
        <fullName>Super_Center_Budget</fullName>
        <active>true</active>
        <description>Budget for the super center record</description>
        <label>Super Center Budget</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>